# rustByExample

./: Cargo.toml
ch1/: Cargo.toml  display.rs  formatted_print.rs
ch14/: Cargo.toml  associated_type.rs  empty_bound.rs  function.rs  implementation.rs  multiple_bound.rs  newtype.rs  phantom_type.rs  trait.rs  trait_bound.rs  where.rs
ch15/: Cargo.toml  aliasing.rs  borrowing.rs  borrowing_mutability.rs  bounds.rs  coercion.rs  elision.rs  explicit_annotation.rs  functions.rs  lifetimes.rs  methods.rs  mutability.rs  ownership.rs  partial_move.rs  raii.rs  ref_pattern.rs  static.rs  structs.rs  traits.rs
ch16/: Cargo.toml  derive.rs  drop.rs  dyn.rs  fully_qualified_syntax.rs  iterators.rs  overloading.rs  supertraits.rs  traits.rs
ch17/: Cargo.toml  designator.rs  dry.rs  dsl.rs  macro_rule.rs  overload.rs  repeat.rs  variadic_interface.rs
ch18/: Cargo.toml  aliase4result.rs  and_then.rs  boxing_err.rs  define_err.rs  early_return.rs  get_or_insert.rs  get_or_insert_with.rs  map4result.rs  option.rs  option_map.rs  option_or.rs  or_else.rs  other_question_mark.rs  panic.rs  question_mark.rs  unpacking.rs  wrapping_err.rs
ch2/: Cargo.toml  slice_and_array.rs  tuple.rs
ch3/: Cargo.toml  enum.rs  linked_list.rs  structure.rs  structures.rs  type_aliase.rs  use.rs
ch5/: Cargo.toml  aliasing.rs  inference.rs
ch6/: Cargo.toml  from_and_into.rs  to_and_from_str.rs
ch7/: Cargo.toml  for_iterator.rs  match.rs  match_binding.rs  match_guard.rs
ch8/: Cargo.toml  associated_function_and_method.rs  closure.rs  closure_as_input.rs  closure_capture.rs  higher_order_function.rs
ch9/: Cargo.toml  struct_visibility.rs  super_and_self.rs  use.rs  visibility.rs
