[package]
name = "ch14"  
version = "0.1.0"
edition = "2021" 

[[bin]]
name = "generic"
path = "generic.rs"

[[bin]]
name = "function"
path = "function.rs"

[[bin]]
name = "implementation"
path = "implementation.rs"

[[bin]]
name = "trait"
path = "trait.rs"

[[bin]]
name = "trait_bound"
path = "trait_bound.rs"

[[bin]]
name = "empty_bound"
path = "empty_bound.rs"

[[bin]]
name = "multiple_bound"
path = "multiple_bound.rs"

[[bin]]
name = "where.rs"
path = "where.rs"

[[bin]]
name = "newtype"
path = "newtype.rs"

[[bin]]
name = "associated_type"
path = "associated_type.rs"