[package]
name = "ch15"  
version = "0.1.0"
edition = "2021"  

[[bin]]
name = "raii"
path = "raii.rs"

[[bin]]
name = "drop"
path = "drop.rs"

[[bin]]
name = "ownership"
path = "ownership.rs"

[[bin]]
name = "mutability"
path = "mutability.rs"

[[bin]]
name = "partial_move"
path = "partial_move.rs"

[[bin]]
name = "borrowing"
path = "borrowing.rs"

[[bin]]
name = "borrowing_mutability"
path = "borrowing_mutability.rs"

[[bin]]
name = "aliasing"
path = "aliasing.rs"

[[bin]]
name = "ref_pattern"
path = "ref_pattern.rs"