[package]
name = "ch16"  
version = "0.1.0"
edition = "2021"  

[[bin]]
name = "traits"
path = "traits.rs"

[[bin]]
name = "derive"
path = "derive.rs"

[[bin]]
name = "dyn"
path = "dyn.rs"

[[bin]]
name = "drop"
path = "drop.rs"

[[bin]]
name = "iterators"
path = "iterators.rs"

[[bin]]
name = "supertraits"
path = "supertraits.rs"