[package]
name = "ch18"  
version = "0.1.0"
edition = "2021"  

[[bin]]
name = "panic"
path = "panic.rs"

[[bin]]
name = "option"
path = "option.rs"

[[bin]]
name = "unpacking"
path = "unpacking.rs"

[[bin]]
name = "option_map"
path = "option_map.rs"

[[bin]]
name = "option_and_then"
path = "option_and_then.rs"