[package]
name = "ch18"  
version = "0.1.0"
edition = "2021"  

[[bin]]
name = "panic"
path = "panic.rs"

[[bin]]
name = "option"
path = "option.rs"

[[bin]]
name = "unpacking"
path = "unpacking.rs"

[[bin]]
name = "option_map"
path = "option_map.rs"

[[bin]]
name = "and_then"
path = "and_then.rs"

[[bin]]
name = "option_or"
path = "option_or.rs"

[[bin]]
name = "or_else"
path = "or_else.rs"

[[bin]]
name = "get_or_insert"
path = "get_or_insert.rs"

[[bin]]
name = "get_or_insert_with"
path = "get_or_insert_with.rs"

[[bin]]
name = "map4result"
path = "map4result.rs"

[[bin]]
name = "aliase4result"
path = "aliase4result.rs"

[[bin]]
name = "early_return"
path = "early_return.rs"

[[bin]]
name = "question_mark"
path = "question_mark.rs"

[[bin]]
name = "define_err"
path = "question_mark.rs"

[[bin]]
name = "boxing_err"
path = "boxing_err.rs"