[package]
name = "ch7"  
version = "0.1.0"
edition = "2021"  

[[bin]]
name = "for_range"
path = "for_range.rs"

[[bin]]
name = "for_iterator"
path = "for_iterator.rs"

[[bin]]
name = "match"
path = "match.rs"

[[bin]]
name = "match_guard"
path = "match_guard.rs"

[[bin]]
name = "match_binding"
path = "match_binding.rs"